--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mssql": "^11.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
