--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
+    "pg": "^8.13.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/multer": "^1.4.12",
     "@types/mysql": "^2.15.26",
     "@types/node": "^22.7.3",
+    "@types/pg": "^8.11.10",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
